# mol-rs

./: Cargo.toml
src/: app.rs  io.rs  main.rs  selection.rs
src/app/: commands.rs  screenshot.rs  update.rs
src/core/: atom.rs  bond.rs  element.rs  mod.rs  molecule.rs  residue.rs  secondary_structure.rs
src/io/: cif.rs  mod.rs  pdb.rs
src/render/: camera.rs  mod.rs  renderer.rs  rep_cartoon.rs  rep_spheres.rs  rep_sticks.rs
src/render/shaders/: cartoon.wgsl  cylinder.wgsl  line.wgsl  sphere.wgsl
src/scene/: color.rs  mod.rs  scene.rs
src/selection/: evaluator.rs  parser.rs
src/ui/: command_line.rs  control_panel.rs  mod.rs  object_panel.rs
